Test surefire configuration
svn path=/java/branches/merge-hawaiv6/; revision=6397