@@ -568,11 +568,10 @@
 							<version>2.22.0</version>
 						</dependency>
 					</dependencies>
-					<!--  configuration combine.self="override"-->
-					<configuration >
-						<argLine>@{surefireArgLine} -Xms256m -Xmx512m -XX:+UseSerialGC -XX:-UseConcMarkSweepGC</argLine>
+					<configuration combine.self="override">
+						<argLine>@{surefireArgLine} -Xms256m -Xmx512m</argLine>
 						<forkCount>1</forkCount>
-						<reuseForks>true</reuseForks>
+						<reuseForks>false</reuseForks>
 						<testFailureIgnore>false</testFailureIgnore>
 					</configuration>
 				</plugin>
